2004-07-07  Ronald Bultje  <rbultje@ronald.bitfreak.net>

	* configure.ac:
	* gst/gstvalue.c: (gst_value_compare_enum),
	(gst_value_serialize_enum), (gst_value_deserialize_enum),
	(gst_value_can_compare), (gst_value_compare):
	* testsuite/Makefile.am:
	* testsuite/enumcaps/Makefile.am:
	* testsuite/enumcaps/enumcaps.c:
	  Fix enum serialization, deserialization, comparison in caps, add
	  a test to ensure that this continues working in the future.

2004-07-06  David Schleef  <ds@schleef.org>

	* gst/gstcaps.c: (gst_caps_save_thyself), (gst_caps_load_thyself):
	Fix memleak.

2004-07-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstplugin.c: (gst_plugin_check_file), (gst_plugin_load_file):
	* gst/gstplugin.h:
	* gst/registries/gstxmlregistry.c:
	(plugin_times_older_than_recurse), (plugin_times_older_than),
	(gst_xml_registry_parse_padtemplate):
	  only rebuild registry when actual plugins have a newer time than
	  the registry.  Fixes #145520

2004-07-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/manual/manual.xml:
	* docs/manual/win32.xml:
	  add chapter on win32 building.  fixes #142422

2004-07-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Sebastien Cote <sc5 at hermes.usherb.ca>

	* gst/autoplug/gstspider.c: (gst_spider_init),
	(gst_spider_dispose):
	  fix spider memleaks.  fixes #137863

2004-07-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Joe Marcus Clarke <marcus at freebsd dot org>

	* gst/schedulers/gstoptimalscheduler.c:
	(gst_opt_scheduler_pad_unlink):
	  fix SIGBUS error, fixes #145338

2004-07-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstobject.c: (gst_object_replace):
	* gst/gstscheduler.c: (gst_scheduler_get_clock):
	* gst/gstsystemclock.c: (gst_system_clock_obtain):
	  clean up clock lifecycle.  Fixes #109831

2004-07-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/LINGUAS:
	* po/cs.po: